tests/test_struct/bad/ambiguous_fields.catala_en
## Article

```catala
declaration structure Foo:
  data f content integer

declaration structure Bar:
  data f content integer

declaration scope A:
  context x content Foo
  context y content integer

scope A:
  definition x equals Foo { -- f: 1 }
  definition y equals x.f
```

```catala-test {id="A.Interpret"}
catala Interpret -s A
```
